01-multiple_network_interfaces/onprem.tf
resource "google_service_account" "onprem" {
  account_id   = "onprem"
  display_name = "Custom SA for the onprem VM Instance"
}

resource "google_compute_instance" "onprem" {
  name                = "onprem"
  machine_type        = "n2-standard-4"
  project             = var.project_id
  zone                = var.zone
  can_ip_forward      = true
  deletion_protection = false
  enable_display      = false
  tags                = ["onprem"]

  boot_disk {
    auto_delete = true
    mode        = "READ_WRITE"
    initialize_params {
      image = "debian-cloud/debian-12"
      size  = 10
      type  = "pd-balanced"
    }
  }

  network_interface {
    stack_type = "IPV4_ONLY"
    subnetwork = google_compute_subnetwork.subnet_c.id
    network_ip = cidrhost(var.subnet_c, -3)
  }

  scheduling {
    automatic_restart   = true
    on_host_maintenance = "MIGRATE"
    preemptible         = false
    provisioning_model  = "STANDARD"
  }
  shielded_instance_config {
    enable_integrity_monitoring = true
    enable_secure_boot          = false
    enable_vtpm                 = true
  }

  metadata = {
    enable-osconfig = "TRUE"
  }
  metadata_startup_script = <<EOT
      #! /bin/bash
      set -euo pipefail

      export DEBIAN_FRONTEND=noninteractive
      apt-get update
      apt-get install -y nginx-light jq

      NAME=$(curl -H "Metadata-Flavor: Google" "http://metadata.google.internal/computeMetadata/v1/instance/hostname")
      IP=$(curl -H "Metadata-Flavor: Google" "http://metadata.google.internal/computeMetadata/v1/instance/network-interfaces/0/ip")
      METADATA=$(curl -f -H "Metadata-Flavor: Google" "http://metadata.google.internal/computeMetadata/v1/instance/attributes/?recursive=True" | jq 'del(.["startup-script"])')

      cat <<EOF > /var/www/html/index.html
      <pre>
      Name: $NAME
      IP: $IP
      Metadata: $METADATA
      </pre>
      EOF
  EOT

  service_account {
    email  = google_service_account.onprem.email
    scopes = ["cloud-platform"]
  }
}
